tests/integration/errors/pact_missing_method.rsg
// TEST: compile_error
// EXPECT-ERROR: missing required method 'to_string' from pact 'Printable'

pact Printable {
    fn to_string() -> str
}

struct Foo {
    x: i32 = 0
}

ext Foo impl Printable {}

fn main() {
    f := Foo {}
}
